# credo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bootstrap-default.json
ceremony/: README.md  bootstrap-roots.sh
ceremony/scripts/: bootstrap-first-admin.sh  bootstrap-roots.sh  bootstrap-vigil-tls.sh  generate-openssl-cnf.sh  issue-intermediary.sh  revoke-intermediary.sh
corgi/: Cargo.toml
corgi/docs/: api.md  cli.md  config.md
corgi/examples/: corgi.config.example.json
corgi/src/: archive.rs  assignments.rs  auth.rs  bootstrap.rs  cert_ops.rs  config.rs  error.rs  hooks.rs  lib.rs  log_middleware.rs  main.rs  routes.rs  server.rs  shepherd.rs  state.rs  sync.rs  types.rs  version.ts
corgi/tests/: assignments.rs  cert_ops.rs  challenge.rs  flock_api.rs
credo-lib/: Cargo.toml
credo-lib/src/: archive.rs  auth.rs  config.rs  error.rs  file_policy.rs  lib.rs  log.rs  pid.rs  tls.rs  types.rs
credo-test/: Cargo.toml
credo-test/src/: cert_gen.rs  corgi_harness.rs  fixtures.rs  lib.rs  shepherd_harness.rs  test_dir.rs  vigil_harness.rs
credo-test/tests/: bootstrap.rs  smoke.rs
dashboard/: .gitignore  CLAUDE.md  dashboard  index.html  mockup-hooks-dropdown.html  mockup-hooks-ordered.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
dashboard/docs/: SPEC  cli.md  config.md
dashboard/examples/: .deploy.json.example  dashboard.config.example.json
dashboard/server/: cert-parser.test.ts  cert-parser.ts  cli.ts  config-utils.ts  config.ts  index.ts  routes-auth.ts  shepherd-client.ts
dashboard/server/auth/: middleware.ts  pop.ts  session.ts  users.ts  webauthn.ts
dashboard/server/tests/fixtures/: test-cert.pem
dashboard/src/: App.tsx  api.test.ts  api.ts  main.tsx  theme.css  types.ts  version.ts
dashboard/src/components/: CertViewer.tsx  DnsTxtChecker.tsx  ProtectedRoute.tsx  Shell.tsx  StatBox.tsx  StatusBadge.tsx
dashboard/src/context/: AuthContext.tsx
dashboard/src/hooks/: usePermission.ts  usePoller.ts
dashboard/src/pages/: AdminUsers.tsx  Assignments.tsx  Certificates.test.ts  Certificates.testable.ts  Certificates.tsx  Corgis.tsx  Enroll.tsx  Login.tsx  Overview.tsx  Profile.tsx  ShepherdCAs.tsx  Tools.tsx  VigilCA.tsx
dashboard/src/utils/: pop-browser.ts
deploy/: deploy-script.md  uninstall.sh
deploy/systemd/: INSTALL.md  credo-corgi.service  credo-dashboard.service  credo-shepherd.service  credo-vigil.service
docs/: 2026-05-13-dashboard-auth-guide.md  README.md  architecture.md  bootstrap-guide.md  config-overview.md  dashboard-guide.md  documentation-plan.md  operator-hardening.md  roadmap.md  rust-audit.md  security-defaults.md  troubleshooting.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/archive/: 2026-05-13-dashboard-auth-guide.md  SPEC  documentation-plan.md  rust-audit.md
docs/deploy/: build-target-isolation.md  manual-corgi-setup.md  synology-build-example.json  synology-build-plan.md  synology.md
docs/examples/: corgi.config.example.json  dashboard.config.example.json  shepherd.accounts.example.json  shepherd.assignments.example.json  shepherd.ca.example.json  shepherd.config.example.json  shepherd.corgis.example.json  vigil.config.example.json
docs/roadmap/: README.md  hsm-integration-plan.md  plan-unified-rust-log-rotation.prompt.md  security-critique.md  security.md  tier-1.md  tier-2.md  tier-3.md
docs/superpowers/plans/: 2026-06-30-tier-1-install-bootstrap.md
docs/superpowers/specs/: 2026-06-11-todo-skill-design.md  2026-06-15-improvement-roadmap-design.md
examples/: .install.json.example  vars.config.example.json
scripts/: bootstrap  deploy  install
scripts/ceremony/: bootstrap-roots.sh  ca-vars.env.example  generate-openssl-cnf.sh  issue-intermediary.sh  revoke-intermediary.sh
scripts/lib/: config-gen.sh  prompts.sh  runner.sh
shepherd/: CONTEXT.md  Cargo.toml
shepherd/docs/: api.md  cli.md  config.md
shepherd/examples/: shepherd.assignments.example.json  shepherd.ca.example.json  shepherd.config.example.json  shepherd.corgis.example.json
shepherd/src/: accounts.rs  acme_client.rs  alerts.rs  assignments.rs  auth.rs  cas.rs  cert_store.rs  config.rs  corgi_client.rs  corgis.rs  error.rs  issuance.rs  issuance_ledger.rs  jwt.rs  lib.rs  log_middleware.rs  main.rs  poll.rs  refresh_tokens.rs  renewal_jobs.rs  routes_api.rs  routes_bootstrap.rs  routes_corgi.rs  server.rs  state.rs  types.rs
shepherd/src/dns_providers/: he.rs  mod.rs
shepherd/tests/: accounts.rs  corgi_api.rs  dashboard_api.rs  jwt.rs
tests/fixtures/: README.md  catrust.pem  intermediate-ca.key  intermediate-ca.pem  root-ca.key  root-ca.pem
tools/gen-fixtures/: Cargo.toml
tools/gen-fixtures/src/: main.rs
vigil/: Cargo.toml
vigil/docs/: api.md  cli.md  config.md
vigil/examples/: vigil.config.example.json
vigil/src/: acme.rs  auth.rs  bootstrap.rs  ca.rs  cli.rs  config.rs  ctlog.rs  error.rs  issuance_policy.rs  lib.rs  log_middleware.rs  main.rs  openssl_db.rs  pki_wire.rs  revocation.rs  routes.rs  server.rs  state.rs  storage.rs  types.rs
vigil/tests/: acme.rs  acme_flow.rs  api.rs  pki.rs  revocation.rs  storage.rs
wizard/: bootstrap-wizard
wizard/examples/: defaults.json
wizard/lib/: config-gen.sh  prompts.sh  runner.sh
