[workspace]
members  = ["credo-lib", "corgi", "vigil", "shepherd", "credo-test", "tools/gen-fixtures"]
resolver = "2"

[patch.crates-io]
# Adds ChallengeType::Unknown for unrecognised ACME challenge types (e.g. dns-persist-01)
instant-acme = { path = "vendor/instant-acme" }

[profile.release]
strip         = true
opt-level     = "s"
lto           = true
codegen-units = 1
