[workspace]
members  = ["credo-lib", "corgi", "vigil", "shepherd", "credo-test", "tools/gen-fixtures"]
resolver = "2"

# ---------------------------------------------------------------------------
# Workspace-wide dependency versions — members reference these with
# { workspace = true } to keep versions in sync automatically.
# Members may add extra features with { workspace = true, features = [...] }.
# ---------------------------------------------------------------------------
[workspace.dependencies]
credo-lib = { path = "credo-lib" }

# Async runtime + HTTP
tokio          = { version = "1",   features = ["full"] }
axum           = { version = "0.7", features = ["macros"] }
hyper          = { version = "1",   features = ["http1", "server"] }
hyper-util     = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
tower          = { version = "0.4", features = ["util"] }

# TLS
rustls         = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls   = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"

# X.509 / PEM
x509-parser = "0.16"
pem         = "3"
pkcs8       = { version = "0.10", features = ["pem"] }
p256        = { version = "0.13", features = ["pkcs8", "pem"] }

# Crypto
sha2   = "0.10"
sha1   = "0.10"
hex    = "0.4"
base64 = "0.22"
subtle = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow    = "1"
thiserror = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time   = { version = "0.3", features = ["std"] }

# Unix file operations
nix = { version = "0.29", features = ["fs", "user"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Certificate generation
rcgen = { version = "0.12", features = ["pem"] }

# Misc
rand     = "0.8"
uuid     = { version = "1", features = ["v4"] }
arc-swap = "1"
dotenvy  = "0.15"
tempfile = "3"

[patch.crates-io]
# Adds ChallengeType::Unknown for unrecognised ACME challenge types (e.g. dns-persist-01)
instant-acme = { path = "vendor/instant-acme" }

[profile.release]
strip         = true
opt-level     = "s"
lto           = true
codegen-units = 1
