[package]
name = "corgi"
version = "0.9.0"
edition = "2021"
description = "Corgi - distributed TLS certificate agent for the credo system"

[lib]
name = "corgi"
path = "src/lib.rs"

[[bin]]
name = "corgi"
path = "src/main.rs"

[dependencies]
credo-lib = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP framework + low-level HTTP serving
axum           = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
tower          = { workspace = true }

# TLS
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
rustls-pemfile = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Certificate generation
rcgen = { workspace = true }

# Time
time = { workspace = true }

# X.509
x509-parser = { workspace = true }
pem         = { workspace = true }

# ECDSA P-256
p256  = { workspace = true }
pkcs8 = { workspace = true }

# Crypto
sha2   = { workspace = true }
hex    = { workspace = true }
base64 = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Unix file operations (chmod, chown, atomic symlinks)
nix = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Regex for hook argument validation
regex = "1"

# Date/time
chrono = { workspace = true }

# Misc
dotenvy  = { workspace = true }
rand     = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
credo-test = { path = "../credo-test" }
tempfile   = { workspace = true }
tokio      = { workspace = true }

# Release profile is set in the workspace root Cargo.toml
