[package]
name        = "credo-lib"
version     = "0.9.0"
edition     = "2021"
description = "Shared library for credo Rust services"

[dependencies]
# Async runtime + HTTP
tokio          = { version = "1", features = ["full"] }
axum           = { version = "0.7", features = ["macros"] }
hyper          = { version = "1", features = ["http1", "server"] }
hyper-util     = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
tower          = { version = "0.4", features = ["util"] }

# TLS (pure Rust — required for cross-compilation to MIPS/ARM musl)
rustls         = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls   = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"

# X.509 / PEM parsing
x509-parser = "0.16"
pem         = "3"

# Crypto
sha2 = "0.10"
hex    = "0.4"
base64 = "0.22"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow    = "1"
thiserror = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unix file operations (archive, file_policy)
nix = { version = "0.29", features = ["fs", "user", "signal"] }

[dev-dependencies]
tempfile = "3"
