[package]
name        = "credo-lib"
version     = "0.9.0"
edition     = "2021"
description = "Shared library for credo Rust services"

[dependencies]
# Async runtime + HTTP
tokio          = { workspace = true }
axum           = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
tower          = { workspace = true }

# TLS
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
rustls-pemfile = { workspace = true }

# X.509 / PEM
x509-parser = { workspace = true }
pem         = { workspace = true }

# Crypto
sha2   = { workspace = true }
hex    = { workspace = true }
base64 = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Unix file operations (archive, file_policy)
nix = { workspace = true, features = ["fs", "user", "signal"] }

[dev-dependencies]
tempfile = { workspace = true }
