[package]
name = "credo-test"
version = "0.9.0"
edition = "2021"
description = "Integration test harness for the credo system (vigil, shepherd, corgi)"

[lib]
name = "credo_test"
path = "src/lib.rs"

[dependencies]
credo-lib = { workspace = true }
vigil     = { path = "../vigil" }
shepherd  = { path = "../shepherd" }
corgi     = { path = "../corgi" }

tokio      = { workspace = true }
axum       = { workspace = true }
reqwest    = { workspace = true }
tempfile   = { workspace = true }
anyhow     = { workspace = true }
serde_json = { workspace = true }
rcgen      = { workspace = true }
time       = { workspace = true }
hex        = { workspace = true }
sha2       = { workspace = true }
x509-parser = { workspace = true }
pem        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
