[package]
name        = "shepherd"
version     = "0.9.0"
edition     = "2021"
description = "Shepherd - TLS certificate management control plane for the credo system"

[lib]
name = "shepherd"
path = "src/lib.rs"

[[bin]]
name = "shepherd"
path = "src/main.rs"

[dependencies]
credo-lib = { workspace = true }

# Async runtime + HTTP
tokio          = { workspace = true }
axum           = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
tower          = { workspace = true }

# TLS
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots   = "1"

# ACME client
instant-acme = "0.6"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring"] }
bytes        = "1"

# HTTP client
reqwest = { workspace = true }

# DNS resolver
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }

# JWT (ES256)
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
p256         = { workspace = true, features = ["ecdsa"] }

# X.509 / PEM
x509-parser = { workspace = true, features = ["verify"] }
pem         = { workspace = true }
pkcs8       = { workspace = true }

# Crypto
sha2   = { workspace = true }
hex    = { workspace = true }
base64 = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
time   = { workspace = true }

# Misc
dotenvy  = { workspace = true }
psl      = "2"
rand     = { workspace = true }
rcgen    = { workspace = true }
uuid     = { workspace = true, features = ["serde"] }
arc-swap = { workspace = true }

[dev-dependencies]
credo-test = { path = "../credo-test" }
tempfile   = { workspace = true }
tokio      = { workspace = true }
