[package]
name = "vigil"
version = "0.1.0"
edition = "2021"
description = "Vigil - private certificate authority for the credo system"

[lib]
name = "vigil"
path = "src/lib.rs"

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
# Shared credo library
credo-lib = { path = "../credo-lib" }

# Async runtime + HTTP (mirrors corgi-rs)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }

# TLS (pure Rust — required for cross-compilation to MIPS/ARM musl; mirrors corgi-rs)
# ring uses cc as a build-dep for assembly, handled transparently by cargo-zigbuild.
# No openssl-sys or other native C library dependencies anywhere in this tree.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"

# X.509 / CSR parsing
x509-parser = "0.16"
pem = "3"

# ECDSA curve implementations (for CA signing)
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
p384 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }

# RSA (for ACME JWS RS256/RS384/RS512 verification)
rsa = { version = "0.9", features = ["sha2"] }

# rcgen: used only for bootstrap ephemeral self-signed cert
rcgen = { version = "0.12", features = ["pem"] }

# Cryptographic hashing
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"

# Timing-safe comparison
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["std"] }   # required by rcgen

# .env file loading
dotenvy = "0.15"

# Misc
rand     = "0.8"
uuid     = { version = "1", features = ["v4"] }
arc-swap = "1"

[dev-dependencies]
credo-test = { path = "../credo-test" }
tempfile   = "3"
tokio      = { version = "1", features = ["full"] }

# Release profile is set in the workspace root Cargo.toml
