[package]
name = "vigil"
version = "0.9.0"
edition = "2021"
description = "Vigil - private certificate authority for the credo system"

[lib]
name = "vigil"
path = "src/lib.rs"

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
credo-lib = { workspace = true }

# Async runtime + HTTP
tokio          = { workspace = true }
axum           = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
tower          = { workspace = true }

# TLS
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
rustls-pemfile = { workspace = true }

# X.509 / CSR parsing
x509-parser = { workspace = true }
pem         = { workspace = true }

# ECDSA curve implementations
p256  = { workspace = true, features = ["ecdsa"] }
p384  = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
pkcs8 = { workspace = true }

# RSA (ACME JWS verification)
rsa = { version = "0.9", features = ["sha2"] }

# Certificate generation
rcgen = { workspace = true }

# Crypto
sha2   = { workspace = true }
sha1   = { workspace = true }
hex    = { workspace = true }
base64 = { workspace = true }

# Timing-safe comparison
subtle = "2"

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
time   = { workspace = true }

# Misc
dotenvy  = { workspace = true }
reqwest  = { workspace = true }
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }
rand     = { workspace = true }
uuid     = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
credo-test = { path = "../credo-test" }
tempfile   = { workspace = true }
tokio      = { workspace = true }

# Release profile is set in the workspace root Cargo.toml
